crates/murphy-plugin-macros/tests/ui/fail_node_pattern_atom_node_match.stderr
error: node_pattern!: node kind `int` is not supported by node_pattern! in v1 — see follow-up issue
 --> tests/ui/fail_node_pattern_atom_node_match.rs:4:1
  |
4 | murphy_plugin_macros::node_pattern!(m, "(int 5)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
